# RandomProjects

./: README.md
CBasics/: arrays.c  double_pointers  double_pointers.c  loops  loops.c  pointers  pointers.c  readme.md  structs  structs.c
CBasics/double_pointers.dSYM/Contents/Resources/DWARF/: double_pointers
CBasics/exe/: arrays  conditions  hello_world  input_if_else  loops  variable
CBasics/src/: conditions.c  input_if_else.c  loops.c  variables.c
CBasics/structs.dSYM/Contents/Resources/DWARF/: structs
GoAPI/: Readme.md
GoAPI/api/: api.go
GoAPI/cmd/api/: main.go
GoAPI/internal/handlers/: api.go  get_coin_balance.go
GoAPI/internal/middleware/: authorization.go
GoAPI/internal/tools/: mockdb.go
GoBasics/: go.mod  readme.md
GoBasics/src/: arrays.go  channels.go  extra.go  generics.go  goroutines.go  intDivider.go  main.go  strings.go  structs.go  types.go
NetworkProgramming/: Readme.md
NetworkProgramming/TCP/: go.mod  main.go
NetworkProgramming/TCP/tests/: dial_test.go  listen_test.go
cppGame/: makefile
cppGame/src/: ObjectField.cpp  ObjectField.h  game.cpp  game.h  main.cpp
rust-budget-app/: Cargo.toml
rust-budget-app/src/: main.rs
rust-budget-app/ui/: appwindow.slint
