[package]
name = "rust-budget-app"
version = "0.1.0"
authors = ["apros7 <lucas.vilsen@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-dialog = "0.7.0"
slint = "1.5"
chrono = "0.4"

[build-dependencies]
slint-build = "1.5"
